--- a/app/src/main/res/layout/fragment_contractor_history.xml
+++ b/app/src/main/res/layout/fragment_contractor_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".contractor.ChatFragment">
+    tools:context=".contractor.fragments.ContractorHistoryFragment">
 
     <LinearLayout
         android:id="@+id/llHeaderCon"
@@ -15,21 +15,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
-
         <TextView
             android:id="@+id/tvHome"
-
-            android:layout_width="match_parent"
+            android:layout_weight="3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/myfont"
-            android:text="Chat"
+            android:text="History"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_gravity="center"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="@dimen/_23ssp"
             />
-
     </LinearLayout>
+
 
 </FrameLayout>
