--- a/app/src/main/res/layout/history_card.xml
+++ b/app/src/main/res/layout/history_card.xml
@@ -32,47 +32,38 @@
             <LinearLayout
                 android:id="@+id/nameLL"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toEndOf="@id/ivAccount"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHorizontal_weight="1"
+                android:weightSum="1"
 
                 >
                 <TextView
                     android:id="@+id/tvName"
-                    android:layout_width="match_parent"
+                    android:layout_width="@dimen/_160sdp"
                     android:layout_height="wrap_content"
                     android:text="Viraj Gupta"
                     android:textColor="@color/HardGreen"
-                    android:layout_marginEnd="@dimen/_100sdp"
                     android:textSize="@dimen/_12ssp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginStart="@dimen/_2sdp"
                     android:textStyle="bold"
                     />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-
-                app:layout_constraintStart_toEndOf="@id/nameLL"
-                android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="21/03/2023"
+
                     android:textColor="@color/HardGreen"
                     android:textSize="@dimen/_12ssp"
                     android:layout_marginTop="@dimen/_8sdp"
-
                     android:textStyle="bold"
                     />
-            </LinearLayout>
 
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/requirements"
