--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,6 +17,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvChats"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
