Forgot password layout

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -36,7 +36,7 @@
             android:layout_height="match_parent"
             >
             <TextView
-                android:id="@+id/tvFp"
+                android:id="@+id/tvForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
@@ -61,16 +61,16 @@
                 app:endIconTint="@color/HardGreen"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvFp"
+                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
                 >
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etName"
+                    android:id="@+id/etEmail"
                     style="@style/LoginTextInputInnerFieldStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/login_fields"
                     android:hint="Enter your email"
-                    android:inputType="textEmailAddress" />
+                  />
             </com.google.android.material.textfield.TextInputLayout>
             <TextView
                 android:id="@+id/tvBackToLogin"
@@ -95,7 +95,6 @@
                 android:letterSpacing="0.1"
                 android:textSize="@dimen/_15sdp"
                 android:backgroundTint="@color/status"
-
                 app:cornerRadius="@dimen/_8sdp"
                 android:layout_marginHorizontal="@dimen/_16sdp"
                 app:layout_constraintStart_toStartOf="parent"
