--- a/app/src/main/res/layout/send_message.xml
+++ b/app/src/main/res/layout/send_message.xml
@@ -1,26 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="end"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_marginStart="@dimen/_80sdp"
+    android:layout_marginEnd="@dimen/_6sdp"
+    android:layout_height="wrap_content">
 
     <TextView
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/tvSendMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="This is sending message"
         android:background="@drawable/send_back"
-        android:padding="@dimen/_12sdp"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_12sdp"
-        android:layout_margin="@dimen/_6sdp"
-        />
+        android:padding="10dp"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:text="Hello, this is a message."
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_6sdp"
+        android:layout_marginBottom="@dimen/_6sdp"
+        android:layout_marginStart="@dimen/_6sdp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
