--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     tools:context=".chat.ChatActivity">
 
@@ -34,11 +35,22 @@
         android:layout_height="wrap_content"
         android:weightSum="100"
         android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/rvChats"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/_12sdp"
+        android:layout_margin="@dimen/_6sdp"
         >
+        <ImageView
+            android:id="@+id/ivShareProfile"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_weight="5"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:src="@drawable/share_profile"
+
+            />
         <EditText
             android:id="@+id/tvMessage"
             android:layout_width="match_parent"
@@ -52,13 +64,12 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:inputType="textMultiLine"
             />
-
-
         <ImageView
             android:id="@+id/ivSendChat"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_weight="10"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_weight="5"
+            android:layout_gravity="center"
             android:layout_marginStart="@dimen/_5sdp"
             android:src="@drawable/ic_baseline_send_24"
             android:layout_marginEnd="@dimen/_5sdp"
