--- a/app/src/main/res/layout/activity_contractor_profile.xml
+++ b/app/src/main/res/layout/activity_contractor_profile.xml
@@ -1,9 +1,64 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ratingCard"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".contractor.activity.ContractorProfileActivity">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:layout_gravity="center"
+    app:cardCornerRadius="8dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".contractor.activity.ContractorProfileActivity"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="4dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+
+        android:padding="16dp">
+
+        <!-- Contractor Name -->
+        <TextView
+            android:id="@+id/contractorNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Contractor Name"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+
+        <!-- Contractor Rating -->
+        <RatingBar
+            android:id="@+id/contractorRatingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:stepSize="1"
+            android:layout_gravity="center"
+            android:rating="0"
+            android:layout_marginTop="8dp"/>
+
+        <!-- Rating Label -->
+        <TextView
+            android:id="@+id/ratingLabelTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Rate the contractor"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:layout_marginTop="8dp"/>
+
+        <!-- Submit Rating Button -->
+        <Button
+            android:id="@+id/submitRatingButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit Rating"
+            android:layout_gravity="center"
+            android:textAllCaps="false"
+            android:layout_marginTop="16dp"/>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
