--- a/app/src/main/res/layout/share_profile_send.xml
+++ b/app/src/main/res/layout/share_profile_send.xml
@@ -31,8 +31,8 @@
             <!-- Profile image -->
             <ImageView
                 android:id="@+id/profileImageView"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_baseline_account_circle_24"
                 tools:ignore="ContentDescription" />
@@ -54,8 +54,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_margin="@dimen/_5sdp"
+            android:layout_margin="@dimen/_3sdp"
             android:text="@string/rate_me"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="@dimen/_10sdp"
             android:textAllCaps="false"
             android:letterSpacing="0.1"
