--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -15,10 +15,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
+        app:title="Notification"
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contractorsRv"
+        android:id="@+id/rvChats"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
