--- a/app/src/main/res/layout/item_view_notification.xml
+++ b/app/src/main/res/layout/item_view_notification.xml
@@ -42,7 +42,7 @@
                     android:textSize="@dimen/_17ssp"
                     android:textStyle="bold" />
                 <TextView
-                    android:id="@+id/averageRating"
+                    android:id="@+id/tvAverageRating"
                     android:layout_width="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
@@ -56,7 +56,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/cvDate"
+                    android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_40sdp"
