able to fetch the quotations

--- a/app/src/main/res/layout/item_view_notification.xml
+++ b/app/src/main/res/layout/item_view_notification.xml
@@ -47,11 +47,12 @@
                     android:layout_marginStart="@dimen/_4sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/_10sdp"
                     android:text="3.2" />
                 <ImageView
-                    android:layout_width="@dimen/_15sdp"
-                    android:layout_height="@dimen/_15sdp"
-                    android:layout_marginTop="@dimen/_6sdp"
+                    android:layout_width="@dimen/_10sdp"
+                    android:layout_height="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:src="@drawable/ic_baseline_star_rate_24"
                     />
 
@@ -59,7 +60,7 @@
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_40sdp"
+                    android:layout_marginStart="@dimen/_80sdp"
                     android:text="12-12-2023"
                     android:textColor="@color/HardGreen"
                     android:textSize="@dimen/_12ssp"
